--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
     />
     <meta 
       http-equiv="Content-Security-Policy"
-      content="default-src *;"
+      content="'default-src' *;"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
