--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,10 +8,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <!-- <meta 
+    <meta 
       http-equiv="Content-Security-Policy"
       content="'default-src' *"
-    /> -->
+    />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
