--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <meta 
       http-equiv="Content-Security-Policy"
       content="'default-src' *"
