--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-    />
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <meta name="description" content="Image archive by Andrius Svilys"/>
+    <!-- <meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no"
+    /> -->
+
+
     <!-- <meta 
       http-equiv="Content-Security-Policy"
       content="'default-src' *"
